--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,7 +1,7 @@
 <hr>
 <div class="container">
     <small>
-        Built by <a href="https://bradleytaunt.com">Bradley Taunt</a> with &hearts;.
+        Built by <a href="https://andrewweisbeck.com">Andrew Weisbeck</a> with &hearts;.
         <br/>View the <a href="{{ pkg.repository.url }}">Github repo</a>.
     </small>
 </div>
