--- a/_includes/layouts/donate.njk
+++ b/_includes/layouts/donate.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/base.njk
 section: donate
+permalink: /donate/index.html
 ---
 
 <div class="container">
@@ -14,18 +15,7 @@ section: donate
 </div>
 
 <div class="container">
-    <div class='relative flex flex-wrap min-w-full text-md text-center text-black'>
-		<Image
-			src={donationImg}
-			class='rounded-md w-full max-h-[300px] md:max-h-[500px] my-8 object-cover'
-			alt='Donation page image'
-		/>
 
-		<h2 class='text-xl font-semibold dark:text-slate-50 mt-4'>
-			We have many different methods in which you can make a financial contribution to support us
-			below:
-		</h2>
-	</div>
 
 	<a href='https://cash.app/$lisaweisbeck4' class='bg-green-400 hover:bg-emerald-600 focus:bg-green-400 text-white border-black dark:border-white border-solid border-2 rounded-lg font-semibold w-fit px-4 py-2' target='_blank'>Send a Cashapp</a>
 
@@ -46,7 +36,6 @@ section: donate
 		class='bg-sky-700 dark:bg-slate-50 text-white dark:text-sky-700 dark:hover:bg-emerald-700 dark:hover:text-white dark:focus:bg-slate-50 dark:focus:text-sky-700 w-fit rounded-lg px-4 py-2 font-semibold hover:bg-emerald-700 focus:bg-sky-700'
 		target='_blank'>Support Me on Patreon</a
 	>
-	<Kofi />
 	<a href='https://www.buymeacoffee.com/andrewweisbeck4' target='_blank'
 		><img
 			src='https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png'
