--- a/_includes/components/head-post.njk
+++ b/_includes/components/head-post.njk
@@ -9,6 +9,7 @@
   {% endif %}
   {% set css %}
     {% include "assets/css/inline.css" %}
+    {% include "assets/css/tailwind.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
   {% set js %}
